tutorial-6/webserver-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webserver-blue
    rollout: canary
  name: webserver-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        rollout: canary
        app: webserver-blue
    spec:
      volumes:
      - name: web-config
        configMap:
          name: blue-cm
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-config
        livenessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 3
          periodSeconds: 3

status: {}
