tutorial-6/webserver-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webserver-green
    rollout: canary
  name: webserver-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        rollout: canary
        app: webserver-green
    spec:
      volumes:
      - name: web-config
        configMap:
          name: green-cm
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-config
status: {}
